# BHAPI

./: .gitignore  .project  AUTHORS  BETK.dev  BETK.layout  BHAPI.pro  BHAPI.pro.autosave  BHAPI.pro.user.0000000  BHAPI.pro.user.47cd367  BHAPI.pro.user.a1821e2  BHAPI.pro.user.c4d157a  BHAPI_DEV.1486592118.cbp  BHAPI_DEV.cbp  BHAPI_DEV.cscope_file_list  BHAPI_DEV.depend  BHAPI_DEV.dev  BHAPI_DEV.layout  BHAPI_DEV_build_log (1).html  BHAPI_DEV_build_log.html  BHAPI_wrapper_area.s  CMakeLists.txt  COPYING.TXT  ConfigureChecks.cmake  LGPL-HEADER.TXT  List.s  Makefile  Makefile.1488112080.win  Makefile.Debug  Makefile.Release  Makefile.am  Makefile.win  Memory.s  README.TXT  String.s  StringArray.s  StringList.s  SupportDefs.s  TODO.TXT  autogen.sh  bhapi.1486593914.h  (+9 more)
Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-BHAPI-Desktop_Qt_5_5_0_MinGW_32bit-Debug/: Alert.ii  Alert.s  AppDefs.s  Application.ii  Application.s  ArcGenerator.ii  ArcGenerator.s  Architecture.s  Archivable.s  BHAPI_wrapper_application.s  BHAPI_wrapper_area.s  BHAPI_wrapper_beos-font.s  BHAPI_wrapper_dfb-font.s  BHAPI_wrapper_drawing.s  BHAPI_wrapper_image.s  BHAPI_wrapper_locker.s  BHAPI_wrapper_os.s  BHAPI_wrapper_pixmap.s  BHAPI_wrapper_port.s  BHAPI_wrapper_semaphore.s  BHAPI_wrapper_thread.s  BHAPI_wrapper_timefuncs.s  BHAPI_wrapper_win32-font.s  BHAPI_wrapper_window.s  BHAPI_wrapper_wm.s  Base64.s  Beep.s  Bitmap.ii  Bitmap.s  Box.ii  Box.s  Button.ii  Button.s  CheckBox.ii  CheckBox.s  Clipboard.ii  Clipboard.s  ColorControl.ii  ColorControl.s  Control.ii  (+192 more)
example/: ChangeLog  Makefile.am  Makefile.example  autogen.sh  configure.in  menu.cpp  view-drawing.cpp  window-wmaction.cpp
example/interface/: Makefile.am  helloworld1.cpp  helloworld2.cpp  helloworld3.cpp
example/kernel/: Makefile.am  acquire_sem.c  create_sem.c  release_sem.c
example/render/: Makefile.am  Render-SDL.cpp
manual/: Definition.ent  InterfaceKit.xml  Makefile.am  RenderKit.xml  docbook-html.xsl  docbook.zh_CN.UTF-8.css  index.zh_CN.UTF-8.xml
src/: AppKit.h  Be.1486593940.h  Be.h  ETK.h  Haiku.1489058394.h  Haiku.1489087719.h  Haiku.h  HaikuByteOrder.h  HaikuConfig.h  HaikuConstants.h  HaikuDefs.h  HaikuTypes.h  InterfaceKit.h  KernelKit.h  NetKit.h  RenderKit.h  StorageKit.h  SupportKit.h  XmlKit.h
src/kits/: BE.h  (+22 more)
src/kits/add-ons/: Makefile.am
src/kits/add-ons/font/: FontEngine.cpp  FontEngine.h  FreeType2.cpp  Makefile.am
src/kits/add-ons/graphics/: Accelerant.h  GraphicsCard.h  GraphicsEngine.cpp  GraphicsEngine.h  Makefile.am
src/kits/add-ons/input_server/: InputServerDevice.h  InputServerFilter.h  InputServerMethod.h
src/kits/add-ons/mail_daemon/: MailFilter.h  MailProtocol.h  MailSettingsView.h
src/kits/add-ons/network_settings/: NetworkProfile.h  NetworkSettings.h  NetworkSettingsAddOn.h
src/kits/add-ons/registrar/: MimeSnifferAddon.h
src/kits/add-ons/screen_saver/: ScreenSaver.h
src/kits/add-ons/theme/: DefaultTheme.cpp  Makefile.am  ThemeEngine.cpp  ThemeEngine.h
src/kits/add-ons/tracker/: TrackerAddOn.h
src/kits/kernel/unix/: BHAPI_wrapper_area.cpp  BHAPI_wrapper_image.cpp  BHAPI_wrapper_os.cpp  BHAPI_wrapper_timefuncs.cpp  Makefile.am  etk-area.cpp  etk-image.cpp  etk-os.cpp  etk-timefuncs.cpp
src/kits/kernel/win32/: BHAPI_wrapper_area.cpp  BHAPI_wrapper_image.cpp  BHAPI_wrapper_os.cpp  BHAPI_wrapper_timefuncs.cpp  Makefile.am  etk-area.cpp  etk-image.cpp  etk-os.cpp  etk-timefuncs.cpp
src/libs/libfreetype/: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  Freetype.cpp  Freetype.h  INSTALL.vcproj  cmake_install.cmake  freetype.sln  freetype.vcproj  ftconfig.h.cmake
src/libs/libfreetype/lib/: Freetype.s  Makefile  Makefile.Release  object_script.freetype.Debug  object_script.freetype.Release  object_script.libfreetype.Debug  object_script.libfreetype.Release
src/libs/libfreetype/src/autofit/: aftypes.h
src/libs/libfreetype/src/gxvalid/: gxvcommn.h
tests/: Makefile.am  app-test.cpp  area-test.c  button-test.cpp  file-test.cpp  locker-test.c  looper-test.cpp  message-test.cpp  net-test.cpp  path-test.cpp  port-test.cpp  region-test.cpp  scroll-test.cpp  semaphore-locking-test.c  semaphore-test.c  streamio-test.cpp  string-test.cpp  stringview-test.cpp  texteditable-test.cpp  thread-exit-test.c  thread-suspend-test.cpp  thread-test.c  time-test.c  window-look-test.cpp  xml-parser-test.cpp
tools/: BHAPI_doc.cpp  Makefile.am  check-copying  etkxx-config.in  etkxx-doc.cpp
(+5043 files in other folders)
